--- a/estilo.css
+++ b/estilo.css
@@ -1,17 +1,24 @@
 .fundo-imagem{
   background-image: url(img/fundo.png);
-    background-attachment:fixed ;
+    background-attachment:scroll
 }
-li{
+.barraDeNavegacao{
   font: bold red  3em ;
-  display: inline;
+  /* display: inline; */
   font-family:'Lucida Sans','Lucida Sans Unicode', sans-serif;
   font-weight: bold;
   font-size: 2em;
+  background-color: #EBEBD8;
 }
 .texto{
   font-family:'Lucida Sans','Lucida Sans Unicode', sans-serif;
   font-weight: 300;
+  background-color: #DBDBCA;
 
 
 }
+.fotoHome{
+  width: 300px;
+  height: 400px;
+}
+
